delete function activated

--- a/WebContent/subpages/info.html
+++ b/WebContent/subpages/info.html
@@ -1,15 +1,16 @@
 <div class="jumbotron">
-    <p>{{ info }}</p>
+    <p>Vereinsverwaltung Vesion 0.1</p>
 </div>
 <div class="container">
 <div class="row">
 <div class="col-md-4">
 <h2>About</h2>
 <p>
-  Donec id elit non mi porta gravida at eget metus.
+  Verwaltung von Vereinsadressen.
+  Geplant: generieren von Anschreiben und Serienbriefen.
 </p>
-<p><a class="btn  btn-success" href="#" role="button">View details »</a>
-   
+<p><a class="btn  btn-success" href="#" role="button">ZurÃ¼ck</a>
+
 </p></div></div>
-   
+
 </div>
