--- a/WebContent/subpages/mitglied_neu.html
+++ b/WebContent/subpages/mitglied_neu.html
@@ -2,22 +2,22 @@
 	<hr>
 	<form class="form-horizontal">
 		<fieldset>
- 
+
 			<!-- Form Name -->
-			<legend>Neues Mitglied anlegen</legend>
+			<legend>Neues Mitglied anlegen.</legend>
 
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="mandat">Mandat</label>
 				<div class="col-md-1">
 					<input class="form-control input-md" type="text"
-						ng-model="selectedMember.mandat" readonly="readonly" />
+						ng-model="newMember.mandat" readonly="readonly" />
 				</div>
 			</div>
 			<!-- Select Basic -->
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="anreder">Anrede</label>
 				<div class="col-md-4">
-					<select ng-model="selectedMember.title" id="title" name="title"
+					<select ng-model="newMember.title" id="title" name="title"
 						class="form-control">
 						<option value="Herr">Herr</option>
 						<option value="Frau">Frau</option>
@@ -29,7 +29,7 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="vorname">Vorname</label>
 				<div class="col-md-4">
-					<input ng-model="selectedMember.firstName" id="firstName"
+					<input ng-model="newMember.firstName" id="firstName"
 						name="firstName" type="text" placeholder="Vorname"
 						class="form-control input-md">
 
@@ -40,7 +40,7 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="textinput">Familienname</label>
 				<div class="col-md-4">
-					<input ng-model="selectedMember.lastName" id="lastName" name="lastName"
+					<input ng-model="newMember.lastName" id="lastName" name="lastName"
 						type="text" placeholder="Familienname"
 						class="form-control input-md" required="">
 
@@ -51,16 +51,16 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="email">email</label>
 				<div class="col-md-4">
-					<input ng-model="selectedMember.email" id="email" name="email"
+					<input ng-model="newMember.email" id="email" name="email"
 						type="text" placeholder="email" value="nicht verhanden" class="form-control input-md">
 				</div>
 			</div>
 
-			<!-- Text input-->	
+			<!-- Text input-->
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="strasse">Strasse</label>
 				<div class="col-md-4">
-					<input ng_model="selectedMember.street" id="strasse" name="strasse"
+					<input ng_model="newMember.street" id="strasse" name="strasse"
 						type="text" placeholder="Strasse" class="form-control input-md">
 
 				</div>
@@ -70,7 +70,7 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="plz">Postleitzahl</label>
 				<div class="col-md-4">
-					<input ng-model="selectedMember.PLZ" id="plz" name="plz" value="" type="text"
+					<input ng-model="newMember.PLZ" id="plz" name="plz" value="" type="text"
 						placeholder="Postleitzahl" class="form-control input-md">
 
 				</div>
@@ -80,7 +80,7 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="telefon">Telefonnummer</label>
 				<div class="col-md-4">
-					<input ng-model="selectedMember.phone" id="telefon" value="" name="telefon"
+					<input ng-model="newMember.phone" id="telefon" value="" name="telefon"
 						type="text" placeholder="Telefonnummer"
 						class="form-control input-md">
 
@@ -91,7 +91,7 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="telefon">Handy</label>
 				<div class="col-md-4">
-					<input ng-model="selectedMember.cellPhone" value="nicht verhanden" id="telefon" name="Handy"
+					<input ng-model="newMember.cellPhone" value="nicht verhanden" id="telefon" name="Handy"
 						type="text" placeholder="Handy" class="form-control input-md">
 
 				</div>
@@ -101,7 +101,7 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="stadt">Stadt</label>
 				<div class="col-md-4">
-					<input ng-model="selectedMember.city" id="stadt" value="" name="stadt"
+					<input ng-model="newMember.city" id="stadt" value="" name="stadt"
 						type="text" placeholder="Stadt" class="form-control input-md">
 
 				</div>
@@ -112,7 +112,7 @@
 				<label class="col-md-4 control-label" for="bezahlung">monatlicher
 					Beitrag in Euro</label>
 				<div class="col-md-2">
-					<input ng-model="selectedMember.payment" id="bezahlung" name="bezahlung"
+					<input ng-model="newMember.payment" id="bezahlung" name="bezahlung"
 						type="text" placeholder="monatlicher Beitrag in Euro"
 						class="form-control input-md" required="">
 
@@ -124,11 +124,11 @@
 				<label class="col-md-4 control-label" for="anreder">Monat
 					der Zahlung</label>
 				<div class="col-md-4">
-					<select ng-model="selectedMember.paymentMonth" id="title" name="title"
+					<select ng-model="newMember.paymentMonth" id="title" name="title"
 						class="form-control">
 						<option value="1">Januar</option>
 						<option value="2">Februar</option>
-						<option value="3">März</option>
+						<option value="3">Mï¿½rz</option>
 						<option value="4">April</option>
 						<option value="5">Mai</option>
 						<option value="6">Juni</option>
@@ -146,7 +146,7 @@
 			<div class="form-group">
 				<label class="col-md-4 control-label" for="Bemerkung">Bemerkung</label>
 				<div class="col-md-4">
-					<textarea ng-model="selectedMember.remark" class="form-control"
+					<textarea ng-model="newMember.remark" class="form-control"
 						id="Bemerkung" name="Bemerkung">Bemerkung</textarea>
 				</div>
 			</div>
@@ -155,7 +155,7 @@
 	</form>
 
 	<hr>
-	<button class="btn btn-success" ng-click="saveNewMember(selectedMember)"
+	<button class="btn btn-success" ng-click="saveNewMember(newMember)"
 		ng-disabled="error || incomplete">
 		<span class="glyphicon glyphicon-save"></span> Sichern
 	</button>
